Fix mobile distortion

--- a/src/App.scss
+++ b/src/App.scss
@@ -2,11 +2,9 @@
 
 #root {
   width: 100%;
-  height: 100%;
 }
 
 main {
-  @include column-centered-start();
   width: 100%;
   padding: toRem(32) toRem(16);
   gap: toRem(16);
@@ -16,13 +14,13 @@ main {
     padding: toRem(48) toRem(32);
   }
   @include breakpoint($two-xl) {
-    gap: toRem(24);
     padding: toRem(48) toRem(64);
   }
 }
 
 .list {
   max-width: toRem(1440);
+  margin: 0 auto;
   list-style: none;
   width: 100%;
   display: grid;
@@ -35,6 +33,17 @@ main {
   @include breakpoint($lg) {
     gap: toRem(10) toRem(24);
   }
+
+  &.collage {
+    margin: toRem(12) auto 0;
+
+    @include breakpoint($md) {
+      margin: toRem(16) auto 0;
+    }
+    @include breakpoint($lg) {
+      margin: toRem(24) auto 0;
+    }
+  }
 }
 
 .item {
@@ -42,7 +51,7 @@ main {
   height: 100%;
   border-radius: toRem(12);
   overflow: hidden;
-  position: relative;
+  // position: relative;
 
   @include breakpoint($md) {
     border-radius: toRem(24);
@@ -52,9 +61,9 @@ main {
   }
 
   img {
-    position: absolute;
+    // position: absolute;
     object-fit: cover;
-    @include inset();
+    // @include inset();
 
     width: 100%;
     height: 100%;
